# laba1

./: CMakeLists.txt  Heap.h  HeapTest.cpp  HeapTest.h  Tests.h  UniqueLinkedList.h  main.cpp  menu.cpp  menu.h  sharedPointer.h  ui.cpp  ui.h  uniquePointer.h
structs/: ArraySequence.h  DynamicArray.h  LinkedList.h  Sequence.h
